# Selenium_youtube_scrapper

./: README.md  main.py  pyproject.toml  scratch.py  trending.html
